# imc

./: .gitignore  Makefile  datamodel.py  pyproject.toml  trader.py
round1/: trader1.py  trader1_boilerplate.py  trader1_v0_simple_hardcode_resin.py  trader1_v1_using_boilerplate.py  trader1_v2_also_trading_kelp.py  trader1_v3_clone_for_tweaking.py  trader1_v3_trade_everything.py  trader1_v4_rewrite.py  trader1_v4_test_no_take.py  trader1_v4_tweak_kelp_spread.py
visualizer/: README.md  index.html  package.json  vite.config.ts
visualizer/src/: App.tsx  models.ts  store.ts
visualizer/src/pages/base/: Header.tsx
visualizer/src/pages/home/: HomePage.tsx
visualizer/src/pages/visualizer/: Chart.tsx  OrderDepthTable.tsx  OrderDepthTableSpreadRow.tsx  PositionChart.tsx  TimestampDetail.tsx  TimestampsCard.tsx
visualizer/src/utils/: algorithm.tsx
