[project]
name = "imc"
version = "0.1.0"
description = ""
authors = [
    {name = "Tan Nguyen",email = "45516852+nt7nguye@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
prosperity3bt = "^0.5.0"

